--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js" integrity="sha512-1/RvZTcCDEUjY/CypiMz+iqqtaoQfAITmNSJY17Myp4Ms5mdxPS5UV7iOfdZoxcGhzFbOm6sntTKJppjvuhg4g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
       <script src='project-tracking-intro-component-master.js'></script>
 	  <!--html validated at https://validator.nu/#textarea on 4-8-2023-->
-	  
+	  <!--accessbility tested at https://audit.deque.com/summary  on 4-8-2023-->
 </body>
 </html>
